tests/base/parser/bad/lib/lmodule-library-cid-let-id-colon-tid-eq-with.scillib
scilla_version 0

library TestLib

(* field is always an incorrect expression *)
let a : Bool = field
